# Goalz Project Backend/other_modules/swagger/swagger.json
@@ -261,6 +261,26 @@
           }
         }
       }
+    },
+    "/auth/login/google": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
